// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature/left-sidebar/NewItemsIndicator can receive arbitrary class names as needed 1`] = `
<span
  className="new-items-indicator is-showing test"
/>
`;

exports[`feature/left-sidebar/NewItemsIndicator has base classes/tags used in SASS 1`] = `
<span
  className="new-items-indicator is-showing "
/>
`;
